<resources>
    <string name="app_name">Marcus Tech</string>
    <string name="welcome">Welcome</string>
    <string name="type_your_name_here">Username</string>
    <string name="type_your_password_here">Password</string>
    <string name="login">LOGIN</string>
    <string name="app_logo">app_logo</string>
    <string name="eye_icon">eye_icon</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?</string>
    <string name="enter_your_credentials_to_login">Enter your credentials to login</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_your_account">Create your account</string>
    <string name="email">Email</string>
    <string name="sign_up_btn">SIGN UP</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="redirect_to_login">Login</string>
    <string name="email_hint">Email</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_profile">Your Profile</string>
    <string name="log_out">LOG OUT</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="your_name">Your Name</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_not_verified">Email Not Verified!</string>
    <string name="verify_now">VERIFY NOW</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="user_icon">user_icon</string>
    <string name="personal_profile">PERSONAL PROFILE</string>
    <string name="change_profile">CHANGE PROFILE</string>
    <string name="Full_name">Full Name</string>
    <string name="email_icon">email_icon</string>
    <string name="Email">Email</string>
    <string name="Phone_number">Phone Number</string>
    <string name="phone_icon">phone_icon</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="Profile_photo">Profile Photo</string>
    <string name="Edit_profile">EDIT PROFILE</string>
    <string name="save">SAVE</string>
    <string name="welcome_to_marcus_tech">Welcome to Marcus Tech</string>
    <string name="login_as_administrator">LOGIN AS ADMINISTRATOR</string>
    <string name="login_as_user">LOGIN AS USER</string>
    <string name="welcome_user">Welcome User</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="sign_up_as_a_user">Sign Up as a User</string>
    <string name="sign_up_as_an_admin">Sign Up as an Admin</string>
</resources>