<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbground2"
    tools:context=".UserProfile">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="137dp"
        android:layout_height="109dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/applogo"
        app:layout_constraintBottom_toTopOf="@+id/resend_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275">

        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="236dp"
            android:layout_height="121dp"
            android:contentDescription="@string/profile_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.44"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.275"
            app:srcCompat="@drawable/user_icon" />
    </FrameLayout>

    <TextView
        android:id="@+id/your_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_profile"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <TextView
        android:id="@+id/name"
        android:layout_width="109dp"
        android:layout_height="19dp"
        android:text="@string/Full_name"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/your_email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/your_name"
        android:layout_width="73dp"
        android:layout_height="22dp"
        android:text="@string/your_name"
        app:layout_constraintBottom_toTopOf="@+id/your_email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.322"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame"
        app:layout_constraintVertical_bias="0.464" />

    <ImageView
        android:id="@+id/user_icon"
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:contentDescription="@string/user_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444"
        app:srcCompat="@drawable/user_icon" />

    <TextView
        android:id="@+id/email"
        android:layout_width="92dp"
        android:layout_height="20dp"
        android:text="@string/Email"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/your_email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame"
        app:layout_constraintVertical_bias="0.898" />

    <TextView
        android:id="@+id/your_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_email_address"
        app:layout_constraintBottom_toTopOf="@+id/log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.377"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_profile"
        app:layout_constraintVertical_bias="0.562" />

    <ImageView
        android:id="@+id/email_icon"
        android:layout_width="36dp"
        android:layout_height="23dp"
        android:contentDescription="@string/email_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.561"
        app:srcCompat="@drawable/email_icon" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="132dp"
        android:layout_height="20dp"
        android:text="@string/Phone_number"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/change_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame"
        app:layout_constraintVertical_bias="0.692" />

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        app:layout_constraintBottom_toTopOf="@+id/log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.342"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_email_address"
        app:layout_constraintVertical_bias="0.253" />

    <ImageView
        android:id="@+id/phone_icon"
        android:layout_width="27dp"
        android:layout_height="26dp"
        android:contentDescription="@string/phone_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.658"
        app:srcCompat="@drawable/phone_icon" />

    <Button
        android:id="@+id/log_out"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:onClick="logout"
        android:text="@string/log_out"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />


    <TextView
        android:id="@+id/verified_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_not_verified"
        android:textColor="@color/my_primary_color"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/resend_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

    <Button
        android:id="@+id/resend_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/verify_now"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/your_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reset_password"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number"
        app:layout_constraintVertical_bias="0.932" />

    <Button
        android:id="@+id/change_profile"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:text="@string/change_profile"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/reset_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number"
        app:layout_constraintVertical_bias="0.932" />


</androidx.constraintlayout.widget.ConstraintLayout>

