<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLogin"
    android:background="@drawable/loginbground2">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/applogo"
        android:contentDescription="@string/app_logo">

    </ImageView>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/welcome_admin"
        android:textStyle="bold"
        android:textSize="25sp">

    </TextView>

    <TextView
        android:id="@+id/login_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/enter_your_credentials_to_login"
        android:textStyle="bold">

    </TextView>

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_below="@+id/login_description"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="77dp"
        android:autofillHints=""
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="#BDBDBD"
        tools:ignore="VisualLintTextFieldSize" />


    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/email_edit_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="73dp"
        android:autofillHints=""
        android:hint="@string/type_your_password_here"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#BDBDBD"
        tools:ignore="VisualLintTextFieldSize" />

    <ImageView
        android:id="@+id/eye_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_edit_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="39dp"
        android:contentDescription="@string/eye_icon"
        android:src="@drawable/eye_icon" />



    <Button
        android:id="@+id/login_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="156dp"
        android:layout_height="25dp"
        android:layout_below="@id/login_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="223dp"
        android:text="@string/forgot_password"
        android:textColor="#5D4037"
        android:textSize="15sp">

    </TextView>

    <TextView
        android:id="@+id/dont_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="42dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="#5D4037"
        android:textSize="15sp">

    </TextView>

    <TextView
        android:id="@+id/redirect_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@+id/dont_have_an_account"
        android:clickable="true"
        android:focusable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/sign_up"
        android:textColor="#5D4037"
        android:textSize="15sp"
        android:textStyle="bold">

    </TextView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:visibility="gone" />

</RelativeLayout>