<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbground2"
    tools:context=".UserLogin">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/applogo">

    </ImageView>

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/sign_up_as_an_admin"
        android:textSize="25sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/create_your_account"
        android:textStyle="bold">

    </TextView>

    <EditText
        android:id="@+id/full_name_edit_text"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_below="@+id/create_account"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="77dp"
        android:autofillHints=""
        android:hint="@string/full_name"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="#BDBDBD"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_below="@+id/full_name_edit_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="77dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="#BDBDBD"
        tools:ignore="VisualLintTextFieldSize" />


    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/email_edit_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="73dp"
        android:autofillHints=""
        android:hint="@string/type_your_password_here"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#BDBDBD"
        tools:ignore="VisualLintTextFieldSize" />

    <ImageView
        android:id="@+id/eye_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_edit_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="31dp"
        android:contentDescription="@string/eye_icon"
        android:src="@drawable/eye_icon" />

    <EditText
        android:id="@+id/phone_edit_text"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/password_edit_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="73dp"
        android:autofillHints=""
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textColorHint="#BDBDBD"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="129dp"
        android:layout_height="61dp"
        android:layout_below="@+id/phone_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/sign_up_btn"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/already_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="42dp"
        android:text="@string/already_have_an_account"
        android:textColor="#5D4037"
        android:textSize="15sp">

    </TextView>

    <TextView
        android:id="@+id/redirect_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@+id/already_have_an_account"
        android:clickable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/redirect_to_login"
        android:textColor="#5D4037"
        android:textSize="15sp"
        android:textStyle="bold"
        android:focusable="true">

    </TextView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:visibility="gone" />


</RelativeLayout>